--- a/style-cata.css
+++ b/style-cata.css
@@ -16,7 +16,7 @@ header h1 {
 
 nav {
     display: flex;
-    gap: 20px;
+    gap: 20px; justify-content: space-evenly;
 }
 
 nav a {
@@ -45,6 +45,15 @@ nav a.active {
     background: #577ce6;
     padding: 15px;
     border-radius: 5px;
+    color: white;
+    max-height: 60%;
+}
+.texto2 {
+    background: #577ce6;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+    max-height: 90%;
 }
 
 .imagen {
@@ -52,7 +61,11 @@ nav a.active {
     text-align: center;
     padding: 15px;
     border-radius: 5px;
+    color: white;
 }
+
+.imagen2 { width: 100%;
+    border-radius: 5px; }
 
 .imagen img {
     width: 100%;
@@ -63,6 +76,7 @@ nav a.active {
     margin-top: 10px;
     padding: 10px;
     border-radius: 5px;
+    color: white;
 }
 
 .autor {
@@ -73,11 +87,8 @@ nav a.active {
 }
 
 .icono {
-    width: 80px;
-    height: 80px;
+    width: 180px;
+    height: 200px;
     border-radius: 50%;
     margin: 0 auto 10px;
-}
-nav{
-    justify-content: space-evenly;
 }
